syntax = "proto3";

package users;

service Users {
  rpc Create (UserSignUpRequest) returns (UserResponse) {}
  rpc List (PaginationRequest) returns (UsersResponse) {}
  rpc Get (UserIdentifier) returns (UserResponse) {}
  rpc Update (UserUpdateRequest) returns (UserResponse) {}
  rpc Delete (UserIdentifier) returns (SimpleResponse) {}
}

message UserSignUpRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

message UserResponse {
  string id = 1 ;
  string email = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
}

message UsersResponse {
  repeated UserResponse users = 1;
  PaginationResponse paginate = 2;
}

message PaginationRequest {
  int32 page = 1;
  int32 per_page = 2;
}

message PaginationResponse {
  int32 page = 1;
  int32 per_page = 2;
}

message UserUpdateRequest {
  string first_name = 1;
  string last_name = 2;
}

message UserIdentifier {
  string id = 1;
}

message  SimpleResponse {
  string status =  1;
}
